--- a/message-sender/src/main/resources/application.properties
+++ b/message-sender/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 
-debug=true
+debug=false
 
 logging.level.org.springframework=INFO
 logging.level.org.sujit=INFO
@@ -14,9 +14,6 @@ spring.rabbitmq.addresses=127.0.0.1:5672
 spring.rabbitmq.password=guest
 spring.rabbitmq.username=guest
 spring.rabbitmq.host=my_vhost
-
-factory.setAutomaticRecoveryEnabled(true);
-factory.setNetworkRecoveryInterval(10000);
 
 # Queue
 user.queue.name=user-message-q
